--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-name: "Keith Williams - Portfolio"
+name: "Connor Letko - Portfolio"
 description: "Lightweight theme"
-google: "151745455-1"
-url: 'https://kaw393939.github.io'
+google: ""
+url: 'https://cjl72.github.io'
 baseurl: ''
 
 markdown: kramdown
