Feature: Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "Connor Letko - Portfolio"
 description: "Lightweight theme"
-google: ""
+google: "UA-153630802-1"
 url: 'https://cjl72.github.io'
 baseurl: ''
 
