--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-name: "Connor Letko - Portfolio"
+name: "Pari Patel - Portfolio"
 description: "Lightweight theme"
 google: "UA-153630802-1"
-url: 'https://cjl72.github.io'
+url: 'https://pkp68.github.io'
 baseurl: ''
 
 markdown: kramdown
